samples/_failures_safe/1761413656_2dfb21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e2946eb.c:152: error: expected ‘;’, ‘,’ or ‘)’ at end of input
